force-app/main/default/objects/ScheduleSuspension__c/ScheduleSuspension__c.object-meta.xml
<CustomObject>
    <label>Schedule Suspension</label>
    <nameField>
        <displayFormat>SS-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Suspensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>