force-app/main/default/objects/ScheduleSuspension__c/fields/Aggregator__c.field-meta.xml
<CustomField>
    <fullName>Aggregator__c</fullName>
    <label>Aggregator</label>
    <referenceTo>CollectionAggregator__c</referenceTo>
    <relationshipLabel>Suspensions</relationshipLabel>
    <relationshipName>Suspensions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>