force-app/main/default/objects/ScheduleSuspension__c/fields/IsEveryYear__c.field-meta.xml
<CustomField>
    <fullName>IsEveryYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Every Year?</label>
    <type>Checkbox</type>
</CustomField>