force-app/main/default/objects/ScheduleSuspension__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>Aggregator__r.SupplierProductName__c</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>