force-app/main/default/objects/ScheduleSuspension__c/fields/ReactivationDate__c.field-meta.xml
<CustomField>
    <fullName>ReactivationDate__c</fullName>
    <label>Reactivation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>