force-app/main/default/objects/ScheduleSuspension__c/fields/SuspensionDate__c.field-meta.xml
<CustomField>
    <fullName>SuspensionDate__c</fullName>
    <label>Suspension Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>