force-app/main/default/objects/ScheduleSuspension__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>Aggregator__r.Time__c</formula>
    <label>Time</label>
    <type>Text</type>
</CustomField>