force-app/main/default/objects/ScheduleSuspension__c/validationRules/RestrictActive.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictActive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(IsActive__c), SuspensionDate__c &lt;= TODAY(), ReactivationDate__c &gt;= TODAY())</errorConditionFormula>
    <errorDisplayField>IsActive__c</errorDisplayField>
    <errorMessage>Cannot be activated or deactivated while in suspension period.</errorMessage>
</ValidationRule>