force-app/main/default/objects/ScheduleSuspension__c/validationRules/RestrictReactivationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictReactivationDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ReactivationDate__c &lt;= SuspensionDate__c, 
AND(ISCHANGED(ReactivationDate__c), ReactivationDate__c &lt;= TODAY()))</errorConditionFormula>
    <errorDisplayField>ReactivationDate__c</errorDisplayField>
    <errorMessage>Reactivation date should be after Suspension date and should be greater than today.</errorMessage>
</ValidationRule>