force-app/main/default/objects/ScheduleSuspension__c/validationRules/RestrictSuspensionDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictSuspensionDate</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT($Setup.ByPassSetting__c.SuspensionDateValidation__c), SuspensionDate__c &lt;= TODAY(), OR(ISNEW(), ISCHANGED(SuspensionDate__c)))</errorConditionFormula>
    <errorDisplayField>SuspensionDate__c</errorDisplayField>
    <errorMessage>Suspension date should be tomorow or future.</errorMessage>
</ValidationRule>