force-app/main/default/objects/ScheduleSuspension__c/validationRules/RestrictSuspensionOver90Days.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictSuspensionOver90Days</fullName>
    <active>true</active>
    <errorConditionFormula>(ReactivationDate__c - SuspensionDate__c) &gt; 90</errorConditionFormula>
    <errorMessage>Suspension over 90 days not allowed, instead delete such collections.</errorMessage>
</ValidationRule>