force-app/main/default/objects/ScheduleSuspension__c/validationRules/RestrictSuspentionDateWithInSuspension.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictSuspentionDateWithInSuspension</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(SuspensionDate__c), SuspensionDate__c &lt;= TODAY(), ReactivationDate__c &gt;= TODAY())</errorConditionFormula>
    <errorDisplayField>SuspensionDate__c</errorDisplayField>
    <errorMessage>Suspension date cannot be changed while in suspension period.</errorMessage>
</ValidationRule>