force-app/main/default/objects/ScheduleSuspension__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Aggregator__c</columns>
    <columns>SuspensionDate__c</columns>
    <columns>ReactivationDate__c</columns>
    <columns>IsEveryYear__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>